<?xml version="1.0" encoding="utf-8"?><!DOCTYPE
    resources
    [<!ENTITY appname "Xuber Services"><!ENTITY provider "Provider"><!ENTITY providers "Providers"><!ENTITY service "Service"><!ENTITY services "Services"><!ENTITY user "User">]>

<resources>

    <!--Application Name-->
    <string name="app_name">&appname;</string>

    <!--Google map-->
    <!--<string name="google_map_api">AIzaSyCiHMKnzPt86tPDGr7HBBonth3KQgSMOqw</string>-->
    <string name="google_map_api">AIzaSyAW3Ns7W44M-d3Y9u2I-jJZORvlsCSbNMw</string>

    <!--Nav Menu-->
    <string name="drawer_open">navigation_drawer_open</string>
    <string name="drawer_close">navigation_drawer_close</string>
    <string name="menu_home">Home</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_coupon">Coupon</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_history">&service; History</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>

    <!-- Coupon Fragment-->
    <string name="enter_the_coupon">Enter the coupon code</string>
    <string name="enter_the_details">Enter your details to register</string>
    <string name="pick_location">Pick Location</string>
    <string name="add_money">Add Money</string>
    <string name="your_cards">Your Cards</string>
    <string name="add_coupon">ADD COUPON</string>
    <string name="apply">Apply</string>
    <string name="choose_payment">Choose payment method</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_otp">OTP</string>
    <string name="use_wallet">Use Wallet</string>
    <string name="time_consumed">Time \n consumed </string>
    <string name="service_photo">&service; Photo</string>
    <string name="service_status">&service; status</string>
    <string name="before_service">Before &service;</string>
    <string name="after_service">After &service;</string>

    <!--Common-->
    <string name="request_xuber">Request &service;</string>
    <string name="enter_service_loc">Enter &service; location</string>
    <string name="looking_for_providers">Looking for your &provider;</string>
    <string name="selected_payment_mode">Cash</string>
    <string name="call">Call</string>
    <string name="invoice">Invoice</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="change">Change</string>
    <string name="True">true</string>
    <string name="False">false</string>
    <string name="field_required">This field is required</string>
    <string name="passwd_length">Password must be minimum 6 characters</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="exit_confirm">Are you sure want to <b>logout</b>?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="carpenter">Carpenter</string>
    <string name="base_fare">Base fare</string>
    <string name="tax_fare">Tax fare</string>
    <string name="hourly_fare">Hourly fare</string>
    <string name="service_type">&service; Type</string>
    <string name="wallet_detection">Wallet Detection</string>
    <string name="promotion_applied">Promotion Applied</string>
    <string name="total">Total</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="enter_service_location">Please enter your &service; location</string>
    <string name="no_comments">No Comments Available</string>
    <string name="empty_home_category">No &service; found</string>
    <string name="sample_base_price">$0</string>
    <string name="pay_now">Pay now</string>
    <string name="services_requested">&services; Provided</string>
    <string name="submit">Submit</string>
    <string name="write_your_comment">Write your comments</string>
    <string name="rate_provider">Rate your &service; with</string>
    <string name="save_picture">Save</string>
    <string name="txt_continue">CONTINUE</string>
    <string name="pick_up_location">Where to?</string>
    <string name="no_service">No &services; found.</string>
    <string name="no_route">There is no route, choose different destination.</string>

    <!--service flow-->
    <string name="provider_accepted">&provider; accepted your request</string>
    <string name="provider_arrived">&provider; arrived to your location</string>
    <string name="provider_service">Enjoy your &service;</string>
    <string name="sample_mail_id">name@example.com</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection.</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet.</string>
    <string name="server_down">Unable to reach server.</string>
    <string name="please_try_again">Please try again.</string>
    <string name="email_validation">Enter your email ID.</string>
    <string name="not_valid_email">Not a valid email ID.</string>
    <string name="password_validation">Password could not be left empty.</string>
    <string name="first_name_empty">First name required.</string>
    <string name="last_name_empty">Last name required.</string>
    <string name="mobile_number_empty">Phone number required.</string>
    <string name="password_txt">******</string>

    <!--Show Dailog-->
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="cencel_request">Are you sure you want to cancel the &service;?</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>

    <!--Activity Email/Begin -->
    <string name="whats_your_mail_address">What\'s your email address?</string>
    <string name="get_moving_with_xuber_services">Get moving with &appname;</string>
    <string name="enter_your_mail_id">Enter your mail ID</string>

    <!--Activity Password -->
    <string name="welcome_back">Welcome back, sign in to continue </string>
    <string name="enter_your_password">Enter your password</string>
    <string name="i_forgot_my_password"><u>Forgot password?</u></string>
    <string name="i_need_to_create_an_account">I need to create an account</string>

    <!-- Activity ForgetPassword -->
    <string name="recover_password">Enter your mail id to recovery password</string>

    <!--Activity Register-->
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_no">9876543210</string>

    <!--Change Password-->
    <string name="change_password_title">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="please_enter_current_pass">Please enter current password.</string>
    <string name="please_enter_new_pass">Please enter new password.</string>
    <string name="please_enter_confirm_pass">Please enter confirmation password.</string>
    <string name="different_passwords">Password doesn\'t match.</string>
    <string name="commision">Commision</string>

    <!--Your Trips-->
    <string name="history">History</string>
    <string name="comments">Comments</string>
    <string name="no_trips">You have no past &services;</string>
    <string name="your_trips">Your &services;</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="cancel_ride">Cancel &service;</string>

    <!--Schedule Layout -->
    <string name="schedule">Schedule a &service;</string>
    <string name="change_date">Change</string>
    <string name="sample_date">Choose a date</string>
    <string name="sample_time">Choose a time</string>
    <string name="next">Schedule Request</string>
    <string name="different_time">You can\'t schedule in past timings, please choose different time.</string>
    <string name="choose_date_time">Please choose date and time for schedule.</string>
    <string name="didnt_get_otp">Didn\'t get OTP?</string>
    <string name="click_to_resend"> Click here to Resend</string>

    <!--Payment Fragment-->
    <string name="payment">Payment</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_payments">Add cards for your payment</string>
    <string name="card_details">Card Details</string>
    <string name="card_number">Credit/Debit Card Number</string>
    <string name="sample_card_no">XXXX - XXXX - XXXX - XXXX</string>
    <string name="month_and_year">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="add">Add Card</string>
    <string name="enter_card_details">Card details not valid.</string>
    <string name="are_you_sure">Are you sure want to remove?</string>
    <string name="are_you_sure_cancel">Are you sure want to cancel request?</string>
    <string name="are_you_sure_call">Are you sure want to make a call with &provider;?</string>

    <!--Coupon Activity-->
    <string name="not_vaild_coupon">Coupon is not valid or may expired.</string>
    <string name="coupon_added">Coupon applied successfully.</string>
    <string name="add_coupon_txt">Add Coupon</string>
    <string name="added_coupon">Coupon\'s applied by you</string>
    <string name="already_in_use_coupon">Coupon already used by you.</string>
    <string name="expired_coupon">Sorry, coupon has expired.</string>
    <string name="off">OFF</string>
    <string name="the_applied_coupon">The coupon code applied is</string>
    <string name="valid_until">Valid until</string>
    <string name="enter_the_code">Enter the coupon code</string>

    <!--Provider Accepted-->
    <string name="sample_name">Will Smith</string>
    <string name="sample_service">BMW</string>
    <string name="call_btn">Call</string>
    <string name="cancel_trip">Cancel &service;</string>
    <string name="surge_pricing">Due to peak hours, charges will be vary based on availability of &providers;.</string>
    <string name="no_upcoming_trips">You have no upcoming &service;</string>

    <!--Wallet Activity-->
    <string name="wallet_balance">Your wallet amount is</string>
    <string name="default_amount">$0.0</string>

    <!-- Edit Activity-->
    <string name="edit_profile">Edit Account</string>
    <string name="profile">Profile</string>
    <string name="change_password">Looking to change password?</string>
    <string name="save">SAVE</string>
    <string name="update_success">Profile Updated.</string>
    <string name="help">Help</string>
    <string name="book_name">Booking ID</string>
    <string name="password_size">Password size must be atleast 6</string>
    <string name="sorry_for_inconvinent">Sorry for inconvenient, Our assisants are busy right now</string>
    <string name="help_msg">Our team person contact\n you soon!</string>
    <string name="first_name_no_number">First name do not accept numbers</string>
    <string name="last_name_no_number">Last name do not accept numbers</string>
    <string name="mobile_no_length">Mobile number must have 10 to 20 digits</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">Log in</string>
    <string name="here">here</string>
    <string name="exit_app_confirm">Are you sure want to <b>exit</b>?</string>
    <string name="exit">Exit</string>
    <string name="hello_team">Hello team</string>
    <string name="email_help">This is my email id : </string>
    <string name="no_mobile">No mobile available</string>
    <string name="retry">Retry</string>
    <string name="no_service_retry">No services available!</string>
    <string name="session_timeout">Please login to continue</string>
</resources>
