<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_header"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/back_icon" />

        <com.xuber_for_services.app.Utils.ClanProTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/payment"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">

        <com.xuber_for_services.app.Utils.ClanProTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/payment_methods"

            android:textColor="@color/user_name"
            android:textSize="@dimen/_12ssp" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="@dimen/_3sdp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/_1sdp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/cash_coloured" />

                <com.xuber_for_services.app.Utils.ClanProTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:gravity="center_vertical"
                    android:text="@string/selected_payment_mode"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <com.xuber_for_services.app.Utils.ClanProTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/your_cards"
            android:textColor="@color/user_name"
            android:textSize="@dimen/_12ssp" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="@dimen/_3sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.xuber_for_services.app.Utils.ClanProTextView
                    android:id="@+id/empty_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center"
                    android:text="No Card Details found!"
                    android:textColor="@color/user_name"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone" />

                <ListView
                    android:id="@+id/payment_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="visible" />

                <View
                    android:id="@+id/last_name_view"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/user_name"
                    android:visibility="visible" />

                <com.xuber_for_services.app.Utils.ClanProTextView
                    android:id="@+id/addCard"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center"
                    android:text="@string/add_payments"
                    android:textColor="@color/user_name"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
