<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/navigation_header"
                layout="@layout/navigation_header"
                android:elevation="@dimen/_10sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgHome"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:src="@drawable/home" />


                <com.xuber_for_services.app.Utils.ClanProButton
                    android:id="@+id/home_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nav_btn_selector"
                    android:drawablePadding="@dimen/_22sdp"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/menu_home"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgPayment"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/payment_select"
                />

            <com.xuber_for_services.app.Utils.ClanProButton
                android:id="@+id/payment_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_btn_selector"
                android:drawablePadding="@dimen/_22sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_15sdp"
                android:text="@string/menu_payment"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgCoupon"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/coupon_select" />

            <com.xuber_for_services.app.Utils.ClanProButton
                android:id="@+id/coupon_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_btn_selector"
                android:drawablePadding="@dimen/_22sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_15sdp"
                android:text="@string/menu_coupon"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgWallet"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/wallet_select" />

            <com.xuber_for_services.app.Utils.ClanProButton
                android:id="@+id/wallet_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_btn_selector"
                android:drawablePadding="@dimen/_22sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_15sdp"
                android:text="@string/menu_wallet"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgServiceHistory"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/service_history_select" />

            <com.xuber_for_services.app.Utils.ClanProButton
                android:id="@+id/history_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_btn_selector"
                android:drawablePadding="@dimen/_22sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_15sdp"
                android:text="@string/menu_history"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgHelp"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:src="@drawable/help_select" />

                <com.xuber_for_services.app.Utils.ClanProButton
                    android:id="@+id/help_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nav_btn_selector"
                    android:drawablePadding="@dimen/_22sdp"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/help"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgShare"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/share_select" />

            <com.xuber_for_services.app.Utils.ClanProButton
                android:id="@+id/share_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_btn_selector"
                android:drawablePadding="@dimen/_22sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_15sdp"
                android:text="@string/menu_share"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgLogout"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/logout_black"
                android:visibility="visible"/>

            <com.xuber_for_services.app.Utils.ClanProButton
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_btn_selector"
                android:drawablePadding="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_15sdp"
                android:text="@string/menu_logout"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
